SpringBoot集成Redis（注解版）

--- a/spring-boot-redis/src/main/resources/application.properties
+++ b/spring-boot-redis/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.redis.host=127.0.0.1
 debug=true
+
+
+spring:
+    cache:
+    cache-names: outLimit，notOutLimit
+    caffeine:
+    spec: initialCapacity=50,maximumSize=500,expireAfterWrite=5s,refreshAfterWrite=7s
+    type: caffeine
