SpringBoot集成Redis（注解版）

--- a/spring-boot-redis/src/main/resources/application.properties
+++ b/spring-boot-redis/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.redis.host=127.0.0.1
 debug=true
 
+#默认使用配置
+spring:
+profiles:
+active: dev
+
 
 spring:
     cache:
@@ -8,3 +13,32 @@ spring:
     caffeine:
     spec: initialCapacity=50,maximumSize=500,expireAfterWrite=5s,refreshAfterWrite=7s
     type: caffeine
+
+
+
+#数据库配置
+spring:
+datasource:
+type: com.alibaba.druid.pool.DruidDataSource
+driverClassName: org.postgresql.Driver
+url: jdbc:postgresql://127.0.0.1:5432/postgres
+username: postgres
+password: postgres
+druid:
+#初始化连接大小
+initial-size: 8
+#最小空闲连接数
+min-idle: 5
+#最大连接数
+max-active: 10
+#查询超时时间
+query-timeout: 6000
+#事务查询超时时间
+transaction-query-timeout: 6000
+#关闭空闲连接超时时间
+remove-abandoned-timeout: 1800
+filters: stat,config
+
+#mybatis
+mybatis:
+mapper-locations: classpath:com/examle/mpdemo/dao/*.xml
