--- a/spring-boot-redis/pom.xml
+++ b/spring-boot-redis/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>spring-boot</artifactId>
             <version>2.1.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+        <version>1.1.2.6</version>
+    </dependency>
     </dependencies>
     <build>
         <plugins>
